--- a/copyright-protection/javascript/.gitignore
+++ b/copyright-protection/javascript/.gitignore
@@ -76,8 +76,8 @@ typings/
 # Serverless directories
 .serverless
 
-# Compiled TypeScript files
-dist
-
 wallet
 !wallet/.gitkeep
+
+package-lock.json
+hfc-key-store/
