--- a/copyright-protection/javascript/package.json
+++ b/copyright-protection/javascript/package.json
@@ -1,18 +1,15 @@
 {
     "name": "fabcar",
     "version": "1.0.0",
-    "description": "FabCar application implemented in TypeScript",
+    "description": "FabCar application implemented in JavaScript",
     "engines": {
         "node": ">=8",
         "npm": ">=5"
     },
     "scripts": {
-        "lint": "tslint -c tslint.json 'src/**/*.ts'",
+        "lint": "eslint .",
         "pretest": "npm run lint",
-        "test": "nyc mocha -r ts-node/register src/**/*.spec.ts",
-        "build": "tsc",
-        "build:watch": "tsc -w",
-        "prepublishOnly": "npm run build"
+        "test": "nyc mocha --recursive"
     },
     "engineStrict": true,
     "author": "Hyperledger",
@@ -22,28 +19,17 @@
         "fabric-network": "^2.1.0"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.7",
-        "@types/mocha": "^5.2.5",
-        "@types/node": "^10.12.10",
-        "@types/sinon": "^5.0.7",
-        "@types/sinon-chai": "^3.2.1",
         "chai": "^4.2.0",
+        "eslint": "^5.9.0",
         "mocha": "^5.2.0",
         "nyc": "^14.1.1",
         "sinon": "^7.1.1",
-        "sinon-chai": "^3.3.0",
-        "ts-node": "^7.0.1",
-        "tslint": "^5.11.0",
-        "typescript": "^3.1.6"
+        "sinon-chai": "^3.3.0"
     },
     "nyc": {
-        "extension": [
-            ".ts",
-            ".tsx"
-        ],
         "exclude": [
             "coverage/**",
-            "dist/**"
+            "test/**"
         ],
         "reporter": [
             "text-summary",
