done (applications for org1, 2)

--- a/application/app1/package.json
+++ b/application/app1/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "fabcar",
+    "name": "app1",
     "version": "1.0.0",
-    "description": "FabCar application implemented in JavaScript",
+    "description": "Copyright Protection application implemented in JavaScript",
     "engines": {
         "node": ">=8",
         "npm": ">=5"
